--- a/backend/src/requirements.txt
+++ b/backend/src/requirements.txt
@@ -3,9 +3,12 @@ databases[postgresql]==0.4.3
 fastapi==0.68.1
 psycopg2-binary==2.8.6
 SQLAlchemy==1.3.24
-
+pydantic[email]
 uvicorn==0.13.4
-
+pyjwt==2.1.0
+passlib[bcrypt]
+python-jose>=3.3.0
+python-multipart
 # dev
 pytest==6.2.3
 requests==2.25.1
