--- a/backend/src/requirements.txt
+++ b/backend/src/requirements.txt
@@ -9,6 +9,9 @@ pyjwt==2.1.0
 passlib[bcrypt]
 python-jose>=3.3.0
 python-multipart
+pydantic
+#geojson-pydantic
+geojson
 # dev
 pytest==6.2.3
 requests==2.25.1
