--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:14-alpine AS development
-#ENV NODE_ENV development
+ENV NODE_ENV development
 # Add a work directory
 WORKDIR /app
 # Cache and Install dependencies
@@ -14,7 +14,7 @@ EXPOSE 3000
 CMD ["npm", "run", "start"]
 
 FROM node:14-alpine AS builder
-#ENV NODE_ENV production
+ENV NODE_ENV production
 # Add a work directory
 WORKDIR /app
 # Cache and Install dependencies
@@ -28,11 +28,11 @@ RUN npm run build
 
 # Bundle static assets with nginx
 FROM nginx:1.21.0-alpine as production
-#ENV NODE_ENV production
+ENV NODE_ENV production
 # Copy built assets from builder
 COPY --from=builder /app/build /usr/share/nginx/html
 # Add your nginx.conf
-COPY ../nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 # Expose port
 EXPOSE 80
 # Start nginx
