--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -19,8 +19,8 @@ WORKDIR /app
 # Cache and Install dependencies
 COPY package.json .
 COPY package-lock.json ./
-RUN npm i
-# Copy app files
+RUN npm i npm@latest
+# Copy app files 
 COPY . .
 # Build the app
 RUN npm run build
