--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -61,18 +61,18 @@ services:
     depends_on:
       - api
       - frontend
-#  nginx-proxy-letsencrypt:
-#    image: jrcs/letsencrypt-nginx-proxy-companion
-#    env_file:
-#      - ./.env.prod.proxy-companion
-#    volumes:
-#      - /var/run/docker.sock:/var/run/docker.sock:ro
-##     - certs:/etc/nginx/certs
-#      - html:/usr/share/nginx/html
-#      - vhost:/etc/nginx/vhost.d
-#      - acme:/etc/acme.sh
-#    depends_on:
-#      - nginx-proxy
+  nginx-proxy-letsencrypt:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    env_file:
+      - ./.env.prod.proxy-companion
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - certs:/etc/nginx/certs
+      - html:/usr/share/nginx/html
+      - vhost:/etc/nginx/vhost.d
+      - acme:/etc/acme.sh
+    depends_on:
+      - nginx-proxy
 
 #To persist the data beyond the life of the container we configured a volume. This config will bind postgres_data to the "/var/lib/postgresql/data/" directory in the container.
 volumes:
