--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -31,7 +31,7 @@ ENV NODE_ENV production
 # Copy built assets from builder
 COPY --from=builder /app/build /usr/share/nginx/html
 # Add your nginx.conf
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+#COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 # Expose port
 EXPOSE 80
 # Start nginx
