--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,17 +3,18 @@ version: '3.8'
 services:
   
   api:
-    build: ./backend/src
+    build: 
+      context: ./backend/src
+      dockerfile: Dockerfile.prod
     restart: always
-    command: uvicorn app.main:app --reload --workers 1 --host 0.0.0.0 --port 8000
     volumes:
       - ./backend/src/:/usr/src/app/
-    ports:
-      - 8000:8000
     expose:
-      - 8000
+      - 80
     env_file:
-        - ./.env.prod
+        - ./.env.backend.prod
+    depends_on:
+      - db
   db:
     image: postgres:13-alpine
     volumes:
@@ -22,45 +23,34 @@ services:
       - 5432
     ports:
       - "5432:5432"
-    environment:
-      - POSTGRES_USER=cclimaticouser
-      - POSTGRES_PASSWORD=cc123
-      - POSTGRES_DB=cambioclimatico
+    env_file:
+        - ./.env.bd.prod
+      
   
   frontend:
     build:
       context: ./frontend/
       target: production
     restart: always
-    #ports:
-    #  - "81:80"
-    #  - "444:443"
     expose:
-      - 80
-    environment:
-      - VIRTUAL_PORT=80
-    #volumes:
-    #  - ./frontend/nginx:/etc/nginx/conf.d
-    #command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
-    depends_on:
-      - api
+      - "80"
+    env_file:
+        - ./.env.frontend.prod
 
-  nginx-proxy:
+  nginx-proxy:  
     container_name: nginx-proxy
     #build: nginx
-    image: jwilder/nginx-proxy:0.9
+    image: jwilder/nginx-proxy:latest
     restart: always
     ports:
       - 444:443
       - 81:80
     volumes:
-      - certs:/etc/nginx/certs
-      - html:/usr/share/nginx/html
-      - vhost:/etc/nginx/vhost.d
+      - ./certs:/etc/nginx/certs
+      - ./html:/usr/share/nginx/html
+      - ./vhost:/etc/nginx/vhost.d
       - /var/run/docker.sock:/tmp/docker.sock:ro
-    depends_on:
-      - api
-      - frontend
+      
 #  nginx-proxy-letsencrypt:
 #    image: jrcs/letsencrypt-nginx-proxy-companion
 #    env_file:
