--- a/.env.backend.prod
+++ b/.env.backend.prod
@@ -1,4 +1,4 @@
 DATABASE_URL=postgresql://cclimaticouser:cc123@db/cambioclimatico
 VIRTUAL_HOST=api.ccmagdalena.online
 VIRTUAL_PORT=80
-LETSENCRYPT_HOST=api.ccmagdalena.online:9981
+LETSENCRYPT_HOST=api.ccmagdalena.online
